--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -758,7 +758,7 @@ CONFIG_FEATURE_DC_LIBM=y
 # CONFIG_I2CDUMP is not set
 # CONFIG_I2CDETECT is not set
 # CONFIG_INOTIFYD is not set
-CONFIG_LESS=y
+CONFIG_LESS=n
 CONFIG_FEATURE_LESS_MAXLINES=9999999
 CONFIG_FEATURE_LESS_BRACKETS=y
 CONFIG_FEATURE_LESS_FLAGS=y
