--- a/configs/mingw64_defconfig
+++ b/configs/mingw64_defconfig
@@ -99,6 +99,7 @@ CONFIG_DEBUG=y
 CONFIG_NO_DEBUG_LIB=y
 # CONFIG_DMALLOC is not set
 # CONFIG_EFENCE is not set
+CONFIG_OPTIMIZE_FOR_SPEED=y
 
 #
 # Library Tuning
