--- a/configs/mingw64_defconfig
+++ b/configs/mingw64_defconfig
@@ -55,6 +55,7 @@ CONFIG_FEATURE_EURO=y
 CONFIG_SKIP_ANSI_EMULATION_DEFAULT=2
 CONFIG_FEATURE_IMPROVED_COLOUR_MAPPING=y
 CONFIG_FEATURE_EXTRA_FILE_DATA=y
+CONFIG_CYGPATH=y
 
 #
 # Build Options
